add ollama support

--- a/test.ipynb
+++ b/test.ipynb
@@ -45,6 +45,99 @@
    "source": [
     "retriever.invoke('satranc?')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n",
+      "INFO:chromadb.telemetry.product.posthog:Anonymized telemetry enabled. See                     https://docs.trychroma.com/telemetry for more information.\n",
+      "INFO:vectordb:Vector store initialized successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from router_llm import app, assess_query, GraphState"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/chat \"HTTP/1.1 200 OK\"\n",
+      "INFO:router_llm:Determined next step: conversational with confidence: 1.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'next_step': 'conversational', 'confidence': 1.0}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GraphState(question='hi?', answer='', next_step='conversational')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assess_query(GraphState(question='hi?'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/chat \"HTTP/1.1 200 OK\"\n",
+      "INFO:router_llm:Determined next step: conversational with confidence: 1.0\n",
+      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/api/chat \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'next_step': 'conversational', 'confidence': 1.0}\n",
+      "Next step: conversational\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'question': 'hi',\n",
+       " 'answer': \"Hello! It's great to meet you. How's your day going so far? Is there something on your mind that you'd like to talk about, or are you just looking for some friendly conversation? I'm all ears!\",\n",
+       " 'next_step': 'conversational'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "app.invoke({\"question\": \"hi\"})"
+   ]
   }
  ],
  "metadata": {
