more detailed prompt for ollama

--- a/test.ipynb
+++ b/test.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -125,8 +125,8 @@
     {
      "data": {
       "text/plain": [
-       "{'question': 'hi',\n",
-       " 'answer': \"Hello! It's great to meet you. How's your day going so far? Is there something on your mind that you'd like to talk about, or are you just looking for some friendly conversation? I'm all ears!\",\n",
+       "{'question': 'chat_history:  Question: Hi Ai:',\n",
+       " 'answer': \"Hello there! It's great to meet you! I'm here to listen and help with any questions or topics you'd like to discuss. How's your day going so far? Is there something on your mind that you'd like to talk about, or are you just looking for some friendly conversation?\",\n",
        " 'next_step': 'conversational'}"
       ]
      },
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "app.invoke({\"question\": \"hi\"})"
+    "app.invoke({\"question\": \"chat_history:  Question: Hi Ai:\"})"
    ]
   }
  ],
