--- a/test.ipynb
+++ b/test.ipynb
@@ -45,11 +45,10 @@
    "source": [
     "retriever.invoke('satranc?')"
    ]
-
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -174,8 +173,7 @@
     }
    ],
    "source": [
-
-    "app.invoke({\"question\": \"chat_history:  Question: Hi Ai:\"})"
+    "app.invoke({\"question\": ragquestion})"
    ]
   }
  ],
